# kuma

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
android/kuma/: build.gradle.kts  settings.gradle.kts
android/kuma/kuma/: build.gradle.kts
android/kuma/kuma/src/main/cpp/: CMakeLists.txt  http-jni.cpp  kmlib.cpp  tcp-jni.cpp  udp-jni.cpp  ws-jni.cpp
android/kuma/kuma/src/main/cpp/utils/: jvm.cc  jvm.h  km-jni.h  kmutils-jni.cpp  kmutils-jni.h  scoped_java_ref.cc  scoped_java_ref.h
bld/: build_option.py
bld/android/: build_android.py  build_android_aar.py  build_android_so.py
bld/cmake/toolchains/: arm-linux.cmake  arm64-linux.cmake
bld/ios/: build_ios.py  kuma-Prefix.pch
bld/ios/kuma.xcodeproj/: project.pbxproj
bld/ios/kumaTests/: Info.plist
bld/linux/: build_linux.py
bld/mac/: build_mac.py
bld/mac/kuma/: Info.plist  kuma-Prefix.pch
bld/mac/kuma.xcodeproj/: project.pbxproj
bld/msvc/: Resource.rc  kuma.sln  kuma.vcxproj  kuma.vcxproj.filters
bld/osx/: kuma-Prefix.pch  kumaTarget.xcconfig
bld/osx/kuma.xcodeproj/: project.pbxproj
bld/windows/: build_windows.py  kuma.sln  kuma.vcxproj  kuma.vcxproj.filters
include/: evdefs.h  kevdefs.h  kmapi.h  kmbuffer.h  kmconf.h  kmdefs.h  kmtraits.h  kmtypes.h
src/: AcceptorBase.cpp  AcceptorBase.h  AutoCleaner.h  DnsResolver.cpp  DnsResolver.h  EventLoop.cpp  EventLoop.h  EventLoopImpl.cpp  EventLoopImpl.h  Makefile  SmartAssert.h  SocketBase.cpp  SocketBase.h  TcpConnection.cpp  TcpConnection.h  TcpListenerImpl.cpp  TcpListenerImpl.h  TcpServerSocket.cpp  TcpServerSocket.h  TcpServerSocketImpl.cpp  TcpServerSocketImpl.h  TcpSocket.cpp  TcpSocket.h  TcpSocketImpl.cpp  TcpSocketImpl.h  TimerManager.cpp  TimerManager.h  UdpSocketBase.cpp  UdpSocketBase.h  UdpSocketImpl.cpp  UdpSocketImpl.h  evdefs.h  kmapi.cpp  kmapi.h  kmbuffer.h  kmconf.h  kmdefs.h  kmtypes.h  kuma.h
src/compr/: compr.cpp  compr.h  compr_zlib.cpp  compr_zlib.h
src/http/: H1xStream.cpp  H1xStream.h  Http1xRequest.cpp  Http1xRequest.h  Http1xResponse.cpp  Http1xResponse.h  HttpCache.cpp  HttpCache.h  HttpHeader.cpp  HttpHeader.h  HttpMessage.cpp  HttpMessage.h  HttpParser.cpp  HttpParser.h  HttpParserImpl.cpp  HttpParserImpl.h  HttpRequestBase.cpp  HttpRequestBase.h  HttpRequestImpl.cpp  HttpRequestImpl.h  HttpResponse.cpp  HttpResponse.h  HttpResponseImpl.cpp  HttpResponseImpl.h  IHttpRequest.cpp  IHttpRequest.h  Uri.cpp  Uri.h  httpdefs.h  httputils.cpp  httputils.h
src/http/v2/: FlowControl.cpp  FlowControl.h  FrameParser.cpp  FrameParser.h  H2ConnectionImpl.cpp  H2ConnectionImpl.h  H2ConnectionMgr.cpp  H2ConnectionMgr.h  H2Frame.cpp  H2Frame.h  H2Handshake.cpp  H2Handshake.h  H2Request.cpp  H2Request.h  H2Response.h  H2Stream.cpp  H2Stream.h  H2StreamProxy.cpp  H2StreamProxy.h  h2defs.h  (+8 more)
src/http2/: FrameParser.cpp  FrameParser.h  H2Connection.cpp  H2Connection.h  H2ConnectionImpl.cpp  H2ConnectionImpl.h  H2ConnectionMgr.cpp  H2Frame.cpp  H2Frame.h  H2Request.cpp  H2Request.h  H2Response.cpp  H2Response.h  H2Stream.cpp  H2Stream.h  HPackTable.cpp  HPackTable.h  HPacker.cpp  HPacker.h  StaticTable.h  h2defs.h  hpack.cpp  hpack.h
src/iocp/: Iocp.h  IocpAcceptor.cpp  IocpAcceptor.h  IocpBase.h  IocpSocket.cpp  IocpSocket.h  IocpUdpSocket.cpp  IocpUdpSocket.h
src/ioop/: OpAcceptor.cpp  OpAcceptor.h  OpContext.cpp  OpContext.h  OpSocket.cpp  OpSocket.h  OpUdpSocket.cpp  OpUdpSocket.h
src/jni/: Android.mk  Application.mk  kmapi-jni.cpp  kmapi-jni.h  ws-jni.cpp
src/loop/: EPoll.cpp  EventLoop.cpp  EventLoop.h  IOPoll.h  Notifier.h  SelectPoll.cpp  VPoll.cpp  WinPoll.cpp  internal.h
src/poll/: EPoll.cpp  EventNotifier.h  IOPoll.h  Iocp.h  IocpAcceptor.cpp  IocpAcceptor.h  IocpPoll.cpp  IocpSocket.cpp  IocpSocket.h  IocpUdpSocket.cpp  IocpUdpSocket.h  KQueue.cpp  Notifier.cpp  Notifier.h  PipeNotifier.h  PollSocket.cpp  PollSocket.h  SelectPoll.cpp  SocketNotifier.h  VPoll.cpp  WinPoll.cpp
src/proxy/: BasicAuthenticator.cpp  BasicAuthenticator.h  GssAuthenticator.cpp  GssAuthenticator.h  GssapiAuthenticator.cpp  GssapiAuthenticator.h  ProxyAuthenticator.cpp  ProxyAuthenticator.h  ProxyConnection.cpp  ProxyConnection.h  ProxyConnectionImpl.cpp  ProxyConnectionImpl.h  SspiAuthenticator.cpp  SspiAuthenticator.h  proxydefs.h
src/ssl/: BioHandler.cpp  BioHandler.h  OpenSslLib.cpp  OpenSslLib.h  SioHandler.cpp  SioHandler.h  SslHandler.cpp  SslHandler.h  ssl_utils.h  ssl_utils_darwin.cpp  ssl_utils_linux.cpp  ssl_utils_windows.cpp
src/util/: DataPacket.h  DestroyDetector.h  ImplHelper.h  SmartAssert.h  TimerManager.cpp  TimerManager.h  base64.cpp  base64.h  ccqueue.h  defer.h  kmatomic.h  kmbuffer.h  kmdp.h  kmmutex.h  kmobject.h  kmqueue.h  kmthread.h  kmtimer.cpp  kmtimer.h  kmtrace.cpp  kmtrace.h  refcount.h  skbuffer.h  skutils.h  util.cpp  util.h
src/utils/: ImplHelper.h  utils.cpp  utils.h
src/ws/: WSConnection.cpp  WSConnection.h  WSConnection_v1.cpp  WSConnection_v1.h  WSConnection_v2.cpp  WSConnection_v2.h  WSHandler.cpp  WSHandler.h  WebSocketImpl copy.cpp  WebSocketImpl copy.h  WebSocketImpl.cpp  WebSocketImpl.h  wsdefs.h
test/: README.md
test/client/: Client.cpp  Client.h  DataSender.cpp  DataSender.h  H2ConnTest.cpp  H2ConnTest.h  HttpClient.cpp  HttpClient.h  LoopPool.cpp  LoopPool.h  Makefile  README.md  RateReporter.h  TcpClient.cpp  TcpClient.h  TestLoop.cpp  TestLoop.h  UdpClient.cpp  UdpClient.h  WsClient.cpp  WsClient.h  main.cpp
test/server/: AutoHelper.cpp  AutoHelper.h  Connection.cpp  Connection.h  H2ConnTest.cpp  H2ConnTest.h  Http2Handler.cpp  Http2Handler.h  HttpHandler.cpp  HttpHandler.h  HttpTest.cpp  HttpTest.h  LoopPool.cpp  LoopPool.h  Makefile  ProtoDemuxer.cpp  ProtoDemuxer.h  ProtoServer.cpp  ProtoServer.h  README.md  RateReporter.h  RunLoop.cpp  RunLoop.h  RunLoopPool.cpp  RunLoopPool.h  TcpConn.cpp  TcpConn.h  TcpHandler.cpp  TcpHandler.h  TcpServer.cpp  TcpServer.h  TcpTest.cpp  TcpTest.h  TestLoop.cpp  TestLoop.h  UdpServer.cpp  UdpServer.h  WsHandler.cpp  WsHandler.h  WsTest.cpp  (+4 more)
test/www/: index.html
unittest/: Base64Test.cpp  KMBufferTest.cpp  main.cpp  testutil.h
(+61 files in other folders)
